--- a/TRIUMF-frontend/style.css
+++ b/TRIUMF-frontend/style.css
@@ -22,8 +22,13 @@ section {
   display: flex;
   flex-direction: column;
   align-items: center;
+  background-color: #FAF9F6;
+  justify-content: space-between;
+}
+a {
+  width: 500px;
 }
 
 * {
-  color: aliceblue;
+  color: black;
 }
