--- a/TRIUMF-frontend/style.css
+++ b/TRIUMF-frontend/style.css
@@ -6,36 +6,59 @@ body {
 
 /* RIUMF LOGO */
 img.logo {
-  height: 100px;
+  height: 100%;
+  max-height: 100px;
+  max-width: 300px;
+  width: 100%;
 }
 
 /* VOLTAGE GRAPH */
 img.graph {
-  width: 400px;
+  float: left;
+  width: 100%;
+  max-width: 400px;
 }
 
 /* MAIN DIAGRAM */
 .diagram-img {
+  float: left;
   max-width: 800px;
+  min-width: 500px;
+  width: 40vw;
 }
 
 main {
-  display: flex;
-  flex-direction: row;
+  float: left;
+  overflow: auto;
+  min-height: 100vh;
+  min-width: 100vw;
+}
+
+#BeamContainer {
+  display: inline;
 }
 
 section {
-  display: flex;
-  flex-direction: column;
+  float: left;
+  min-height: 100vh;
+  min-width: 20vw;
   align-items: center;
   background-color: #faf9f6;
   justify-content: space-between;
 }
 
 a {
-  width: 500px;
+  float: left;
+  width: 100%;
+  max-width: 500px;
 }
 
 * {
   color: black;
+}
+
+@media screen and (max-width: 620px) {
+  img.graph, .diagram-img, section{
+    width: 100vw; /* The width is 100%, when the viewport is 800px or smaller */
+  }
 }
