--- a/TRIUMF-frontend/style.css
+++ b/TRIUMF-frontend/style.css
@@ -12,6 +12,7 @@ body {
   height: 100%;
   width: 100%;
   margin: 0;
+  align-items: stretch;
 }
 
 /* nav bar */
@@ -20,6 +21,10 @@ nav {
   justify-content: space-between;
   align-items: center;
   padding: 1rem;
+}
+
+.navText {
+  font-size: large;
 }
 
 nav p {
@@ -48,12 +53,18 @@ img.graph {
 
 /* MAIN DIAGRAM */
 .diagram-img {
-  max-width: 800px;
+  max-height: 100%;
+  width: auto;
+}
+
+.imageLabelContainer {
+  display: block;
 }
 
 main {
   display: flex;
   flex-direction: row;
+  height: 100%;
 }
 
 section {
@@ -61,7 +72,7 @@ section {
   flex-direction: column;
   align-items: center;
   background-color: #f5f5f5;
-  justify-content: space-between;
+  justify-content: flex-start;
   position: relative;
   border: 5px solid #f5f5f5;
   height: 100%;
@@ -92,8 +103,8 @@ h2.sectionTitle {
   position: absolute;
   left: 10px;
   bottom: 10px;
-  background-color: #f4f1f1;
-  border: 5px solid #f5f5f5;
+  background-color: white;
+  border: 5px solid white;
   border-radius: 5px;
 }
 
