--- a/TRIUMF-frontend/style.css
+++ b/TRIUMF-frontend/style.css
@@ -40,6 +40,7 @@ table {
   border: 5px solid #ffffff;
   margin: 0px 0px 5px;
   width: 100%;
+  font-size: larger;
 }
 /* RIUMF LOGO */
 img.logo {
