--- a/TRIUMF-frontend/style.css
+++ b/TRIUMF-frontend/style.css
@@ -13,13 +13,13 @@
   color: black;
   margin: 0;
   padding: 0;
-  font-family: 'Open Sans';
+  font-family: "Open Sans";
 }
 
 body {
   display: flex;
   flex-direction: column;
-  background-color: #009fdf;
+  background-color: #007bdff9;
   height: 100%;
   width: 100%;
   margin: 0;
