--- a/TRIUMF-frontend/style.css
+++ b/TRIUMF-frontend/style.css
@@ -13,14 +13,14 @@
   color: black;
   margin: 0;
   padding: 0;
-  font-family: "Open Sans";
+  font-family: 'Open Sans';
 }
 
 body {
   display: flex;
   flex-direction: column;
   background-color: #007bdff9;
-  height: 100%;
+  height: 95vh;
   width: 100%;
   margin: 0;
   align-items: stretch;
@@ -56,22 +56,25 @@ table {
 }
 /* RIUMF LOGO */
 img.logo {
-  height: 50px;
+  height: auto;
+  width: 20%;
 }
 
 /* VOLTAGE GRAPH */
 img.graph {
-  width: 400px;
+  width: auto;
+  height: 100%;
 }
 
 /* MAIN DIAGRAM */
 .diagram-img {
   max-height: 100%;
-  width: auto;
+  height: 100%;
 }
 
 .imageLabelContainer {
   display: block;
+  height: 100%;
 }
 
 main {
