--- a/TRIUMF-frontend/style.css
+++ b/TRIUMF-frontend/style.css
@@ -57,7 +57,7 @@ table {
 /* RIUMF LOGO */
 img.logo {
   height: auto;
-  width: 20%;
+  width: 15%;
 }
 
 /* VOLTAGE GRAPH */
@@ -75,6 +75,28 @@ img.graph {
 .imageLabelContainer {
   display: block;
   height: 100%;
+}
+
+.imageLabelContainer label.diagramLabel {
+  position: absolute;
+  left: 50%;
+  bottom: 9%;
+  font-size: large;
+  font-weight: 500;
+}
+
+.imageLabelContainer label.diagramLabel2 {
+  position: absolute;
+  left: 50%;
+  bottom: 65%;
+  font-size: large;
+  font-weight: 500;
+}
+
+.imageLabelContainer label.diagramLabel3 {
+  position: absolute;
+  left: 50%;
+  bottom: 55%;
 }
 
 main {
@@ -96,7 +118,7 @@ section {
 }
 
 tr:nth-child(even) {
-  background: hwb(0 98% 2%);
+  background: #efefef;
 }
 tr:nth-child(odd) {
   background: #fff;
@@ -107,6 +129,7 @@ div.subSection {
   flex-direction: row;
   background-color: #f5f5f5;
   width: 100%;
+  height: 70%;
 }
 
 div.smallContainer {
@@ -117,8 +140,8 @@ div.smallContainer {
 
 h2.sectionTitle {
   position: absolute;
-  left: 10px;
-  bottom: 10px;
+  left: 1%;
+  bottom: 1%;
   background-color: white;
   border: 5px solid white;
   border-radius: 5px;
