--- a/TRIUMF-frontend/style.css
+++ b/TRIUMF-frontend/style.css
@@ -155,7 +155,7 @@ canvas {
   html,
   body {
     height: 100%;
-    width: 100%;
+    width: 100vw;
   }
   section {
     flex-direction: column;
