--- a/TRIUMF-frontend/style.css
+++ b/TRIUMF-frontend/style.css
@@ -136,15 +136,15 @@ td {
 }
 
 .vacuum {
-  background-color: #abff00;
+  background-color: #dcecf1;
 }
 
 .mcis {
-  background-color: rgb(14, 169, 14);
+  background-color: #dcecf1;
 }
 
 .aq {
-  background-color: lightblue;
+  background-color: #efefef;
 }
 
 .sis {
