--- a/TRIUMF-frontend/style.css
+++ b/TRIUMF-frontend/style.css
@@ -92,6 +92,7 @@ img.graph {
   bottom: 65%;
   font-size: large;
   font-weight: 500;
+  background-color: lightgreen;
 }
 
 main {
@@ -156,7 +157,7 @@ div.subSection {
   flex-direction: row;
   background-color: #f5f5f5;
   width: 100%;
-  height: 70%;
+  height: 65%;
 }
 
 div.smallContainer {
