css, responsive, diagram laser beam

--- a/TRIUMF-frontend/style.css
+++ b/TRIUMF-frontend/style.css
@@ -21,7 +21,7 @@ body {
   flex-direction: column;
   background-color: #007bdff9;
   height: 90vh;
-  width: 100%;
+  width: 100vw;
   margin: 0;
   align-items: stretch;
   font-weight: 500;
@@ -64,7 +64,13 @@ img.logo {
 /* VOLTAGE GRAPH */
 img.graph {
   width: auto;
+  height: 95%;
+}
+
+.chartContainer {
   height: 100%;
+  width: 100%;
+  overflow-y: hidden;
 }
 
 /* MAIN DIAGRAM */
@@ -97,7 +103,7 @@ img.graph {
 main {
   display: flex;
   flex-direction: row;
-  max-height: 100vh;
+  max-height: 100%;
   margin-bottom: 1rem;
 }
 
