--- a/TRIUMF-frontend/style.css
+++ b/TRIUMF-frontend/style.css
@@ -55,6 +55,10 @@ table {
   width: 100%;
   font-size: larger;
 }
+
+#twitterWidget {
+  overflow: hidden;
+}
 /* RIUMF LOGO */
 img.logo {
   height: auto;
