--- a/TRIUMF-frontend/style.css
+++ b/TRIUMF-frontend/style.css
@@ -13,7 +13,7 @@
   color: black;
   margin: 0;
   padding: 0;
-  font-family: "Open Sans";
+  font-family: 'Open Sans';
 }
 
 body {
@@ -27,13 +27,41 @@ body {
   font-weight: 500;
 }
 
+main {
+  display: flex;
+  flex-direction: row;
+  max-height: 90%;
+  margin-bottom: 1rem;
+}
+
+section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #f5f5f5;
+  justify-content: flex-start;
+  position: relative;
+  border: 5px solid #f5f5f5;
+  height: 100%;
+  width: 100%;
+}
+
+footer {
+  display: flex;
+  min-height: 15vh;
+  background-color: #007bdff9;
+}
+
+header {
+  height: 10%;
+}
+
 /* nav bar */
 nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 1rem;
-  height: 4vh;
 }
 
 .navText {
@@ -81,17 +109,23 @@ img.graph {
 /* MAIN DIAGRAM */
 .diagram-img {
   max-height: 100%;
-  height: 100%;
+  height: auto;
+  width: 100%;
+}
+
+.slideshow {
+  display: inline-block;
 }
 
 .imageLabelContainer {
-  display: block;
+  display: inline-block;
+  width: 100%;
   height: 100%;
 }
 
 .imageLabelContainer label.diagramLabelBeamSource {
   position: absolute;
-  right: 30%;
+  right: 35%;
   bottom: 25%;
   font-size: large;
   font-weight: 500;
@@ -99,35 +133,10 @@ img.graph {
 
 .imageLabelContainer label.diagramLabelBeamStatus {
   position: absolute;
-  right: 30%;
+  right: 35%;
   bottom: 50%;
   font-size: large;
   font-weight: 500;
-}
-
-main {
-  display: flex;
-  flex-direction: row;
-  max-height: 100%;
-  margin-bottom: 1rem;
-}
-
-section {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  background-color: #f5f5f5;
-  justify-content: flex-start;
-  position: relative;
-  border: 5px solid #f5f5f5;
-  height: 100%;
-  width: 100%;
-}
-
-footer {
-  display: flex;
-  min-height: 15vh;
-  background-color: #007bdff9;
 }
 
 /* SLideshow */
