--- a/TRIUMF-frontend/style.css
+++ b/TRIUMF-frontend/style.css
@@ -13,7 +13,7 @@
   color: black;
   margin: 0;
   padding: 0;
-  font-family: 'Open Sans';
+  font-family: "Open Sans";
 }
 
 body {
@@ -25,6 +25,7 @@ body {
   margin: 0;
   align-items: stretch;
   font-weight: 500;
+  overflow-x: hidden;
 }
 
 main {
