--- a/TRIUMF-frontend/style.css
+++ b/TRIUMF-frontend/style.css
@@ -51,7 +51,23 @@ footer {
   display: flex;
   height: 5%;
   max-height: 5%;
+  padding: 0.2rem;
   background-color: #007bdff9;
+  align-items: center;
+}
+
+footer p {
+  color: #ffffff;
+}
+
+.githubLogo {
+  width: 2rem;
+}
+
+.footerNameLink {
+  color: #ffffff;
+  margin: 0;
+  padding: 0;
 }
 
 header {
