border and new svg

--- a/TRIUMF-frontend/style.css
+++ b/TRIUMF-frontend/style.css
@@ -157,7 +157,7 @@ img.graph {
 
 .slideimg {
   border-radius: 1rem;
-  border: 5px solid black;
+  border: 5px solid #f5f5f5;
 }
 
 /* SLideshow */
