--- a/TRIUMF-frontend/style.css
+++ b/TRIUMF-frontend/style.css
@@ -51,9 +51,9 @@ footer {
   display: flex;
   height: 5%;
   max-height: 5%;
-  padding: 0.2rem;
   background-color: #007bdff9;
   align-items: center;
+  margin-top: -0.5%
 }
 
 footer p {
